fixed icon being squashed

--- a/css/tracker-2p.css
+++ b/css/tracker-2p.css
@@ -47,7 +47,6 @@
     top: 10px;
     left: 10px;
     width: 40px;
-    height: 40px;
 }
 
 /* ✅ Player Name - Above the Lore Counter */
